// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components/admin_console/access_control/PolicyList should match snapshot with no policies 1`] = `
<div>
  <div
    class="PolicyTable"
  >
    <div
      class="policy-header"
    >
      <div
        class="policy-header-text"
      >
        <h1>
          Membership Policies
        </h1>
        <p>
          Create policies containing attribute-based membership rules and the channels they apply to.
        </p>
      </div>
      <button
        class="btn btn-primary"
      >
        <i
          class="icon icon-plus"
        />
        <span>
          Add policy
        </span>
      </button>
    </div>
    <div
      class="DataGrid"
      data-testid="dataGrid"
    >
      <div
        class="DataGrid_search"
      >
        <div
          class="DataGrid_searchBar"
        >
          <span
            aria-hidden="true"
            class="DataGrid_searchIcon"
          >
            <i
              class="fa fa-search"
              title="Search Icon"
            />
          </span>
          <input
            data-testid="searchInput"
            placeholder="Search"
            type="text"
            value=""
          />
          <i
            class="DataGrid_clearButton fa fa-times-circle hidden"
            data-testid="clear-search"
          />
        </div>
      </div>
      <div
        class="DataGrid_header"
        data-testid="dataGrid-header"
      >
        <div
          class="DataGrid_cell"
          style="flex-grow: 5;"
        >
          Name
        </div>
        <div
          class="DataGrid_cell"
          style="flex-grow: 4;"
        >
          Applies to
        </div>
        <div
          class="DataGrid_cell"
          style="flex-grow: 1;"
        >
          <span />
        </div>
      </div>
      <div
        class="DataGrid_rows"
        data-testid="dataGrid-rows"
        style="min-height: 0px;"
      >
        <div
          class="DataGrid_empty"
        >
          <div
            class="PolicyList__no-results"
          >
            No policies found
            <span
              class="PolicyList__no-results-hint"
            >
              Add a new policy to get started
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/admin_console/access_control/PolicyList should match snapshot with policies 1`] = `
<div>
  <div
    class="PolicyTable"
  >
    <div
      class="policy-header"
    >
      <div
        class="policy-header-text"
      >
        <h1>
          Membership Policies
        </h1>
        <p>
          Create policies containing attribute-based membership rules and the channels they apply to.
        </p>
      </div>
      <button
        class="btn btn-primary"
      >
        <i
          class="icon icon-plus"
        />
        <span>
          Add policy
        </span>
      </button>
    </div>
    <div
      class="DataGrid"
      data-testid="dataGrid"
    >
      <div
        class="DataGrid_search"
      >
        <div
          class="DataGrid_searchBar"
        >
          <span
            aria-hidden="true"
            class="DataGrid_searchIcon"
          >
            <i
              class="fa fa-search"
              title="Search Icon"
            />
          </span>
          <input
            data-testid="searchInput"
            placeholder="Search"
            type="text"
            value=""
          />
          <i
            class="DataGrid_clearButton fa fa-times-circle hidden"
            data-testid="clear-search"
          />
        </div>
      </div>
      <div
        class="DataGrid_header"
        data-testid="dataGrid-header"
      >
        <div
          class="DataGrid_cell"
          style="flex-grow: 5;"
        >
          Name
        </div>
        <div
          class="DataGrid_cell"
          style="flex-grow: 4;"
        >
          Applies to
        </div>
        <div
          class="DataGrid_cell"
          style="flex-grow: 1;"
        >
          <span />
        </div>
      </div>
      <div
        class="DataGrid_rows"
        data-testid="dataGrid-rows"
        style="min-height: 80px;"
      >
        <div
          class="DataGrid_row"
          data-testid="dataGrid-row"
        >
          <div
            class="DataGrid_cell"
            data-testid="dataGrid-cell"
            style="flex-grow: 5;"
          >
            <div
              class="policy-name"
              id="customDescription-policy1"
            >
              Policy 1
            </div>
          </div>
          <div
            class="DataGrid_cell"
            data-testid="dataGrid-cell"
            style="flex-grow: 4; text-align: center;"
          >
            <div
              class="policy-resources"
              id="customAppliedTo-policy1"
            >
              None
            </div>
          </div>
          <div
            class="DataGrid_cell actions-column"
            data-testid="dataGrid-cell"
            style="flex-grow: 1;"
          >
            <div
              class="policy-actions"
            >
              <button
                aria-controls="policy-menu-dropdown-policy1"
                aria-expanded="false"
                aria-haspopup="true"
                aria-label="Policy actions menu"
                class="_icon-button_mytxt_2 _icon-button--size-small_mytxt_69"
                id="policy-menu-policy1"
                type="button"
              >
                <span
                  aria-hidden="true"
                  class="_icon-button__icon-slot_mytxt_33"
                >
                  <div
                    aria-hidden="true"
                    class="_icon_1i355_2 _icon--size-16_1i355_38"
                  >
                    <div
                      class="_icon__glyph-area_1i355_9"
                    >
                      <svg
                        fill="currentColor"
                        height="18"
                        version="1.1"
                        viewBox="0 0 24 24"
                        width="18"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M12,16A2,2 0 0,1 14,18A2,2 0 0,1 12,20A2,2 0 0,1 10,18A2,2 0 0,1 12,16M12,10A2,2 0 0,1 14,12A2,2 0 0,1 12,14A2,2 0 0,1 10,12A2,2 0 0,1 12,10M12,4A2,2 0 0,1 14,6A2,2 0 0,1 12,8A2,2 0 0,1 10,6A2,2 0 0,1 12,4Z"
                        />
                      </svg>
                    </div>
                  </div>
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          class="DataGrid_row"
          data-testid="dataGrid-row"
        >
          <div
            class="DataGrid_cell"
            data-testid="dataGrid-cell"
            style="flex-grow: 5;"
          >
            <div
              class="policy-name"
              id="customDescription-policy2"
            >
              Policy 2
            </div>
          </div>
          <div
            class="DataGrid_cell"
            data-testid="dataGrid-cell"
            style="flex-grow: 4; text-align: center;"
          >
            <div
              class="policy-resources"
              id="customAppliedTo-policy2"
            >
              None
            </div>
          </div>
          <div
            class="DataGrid_cell actions-column"
            data-testid="dataGrid-cell"
            style="flex-grow: 1;"
          >
            <div
              class="policy-actions"
            >
              <button
                aria-controls="policy-menu-dropdown-policy2"
                aria-expanded="false"
                aria-haspopup="true"
                aria-label="Policy actions menu"
                class="_icon-button_mytxt_2 _icon-button--size-small_mytxt_69"
                id="policy-menu-policy2"
                type="button"
              >
                <span
                  aria-hidden="true"
                  class="_icon-button__icon-slot_mytxt_33"
                >
                  <div
                    aria-hidden="true"
                    class="_icon_1i355_2 _icon--size-16_1i355_38"
                  >
                    <div
                      class="_icon__glyph-area_1i355_9"
                    >
                      <svg
                        fill="currentColor"
                        height="18"
                        version="1.1"
                        viewBox="0 0 24 24"
                        width="18"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M12,16A2,2 0 0,1 14,18A2,2 0 0,1 12,20A2,2 0 0,1 10,18A2,2 0 0,1 12,16M12,10A2,2 0 0,1 14,12A2,2 0 0,1 12,14A2,2 0 0,1 10,12A2,2 0 0,1 12,10M12,4A2,2 0 0,1 14,6A2,2 0 0,1 12,8A2,2 0 0,1 10,6A2,2 0 0,1 12,4Z"
                        />
                      </svg>
                    </div>
                  </div>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="DataGrid_footer"
        data-testid="dataGrid-footer"
      >
        <div
          class="DataGrid_cell"
        >
          <span
            data-testid="dataGrid-footer-paginationInfo"
          >
            1 - 2 of 2
          </span>
          <button
            aria-label="Previous page"
            class="_icon-button_mytxt_2 _icon-button--size-small_mytxt_69 ml-2 prev"
            disabled=""
            type="button"
          >
            <span
              aria-hidden="true"
              class="_icon-button__icon-slot_mytxt_33"
            >
              <div
                aria-hidden="true"
                class="_icon_1i355_2 _icon--size-16_1i355_38"
              >
                <div
                  class="_icon__glyph-area_1i355_9"
                >
                  <svg
                    fill="currentColor"
                    height="18"
                    version="1.1"
                    viewBox="0 0 24 24"
                    width="18"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M15.41,16.58L10.83,12L15.41,7.41L14,6L8,12L14,18L15.41,16.58Z"
                    />
                  </svg>
                </div>
              </div>
            </span>
          </button>
          <button
            aria-label="Next page"
            class="_icon-button_mytxt_2 _icon-button--size-small_mytxt_69 next"
            disabled=""
            type="button"
          >
            <span
              aria-hidden="true"
              class="_icon-button__icon-slot_mytxt_33"
            >
              <div
                aria-hidden="true"
                class="_icon_1i355_2 _icon--size-16_1i355_38"
              >
                <div
                  class="_icon__glyph-area_1i355_9"
                >
                  <svg
                    fill="currentColor"
                    height="18"
                    version="1.1"
                    viewBox="0 0 24 24"
                    width="18"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z"
                    />
                  </svg>
                </div>
              </div>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/admin_console/access_control/PolicyList should match snapshot with search error 1`] = `
<div>
  <div
    class="PolicyTable"
  >
    <div
      class="policy-header"
    >
      <div
        class="policy-header-text"
      >
        <h1>
          Membership Policies
        </h1>
        <p>
          Create policies containing attribute-based membership rules and the channels they apply to.
        </p>
      </div>
      <button
        class="btn btn-primary"
      >
        <i
          class="icon icon-plus"
        />
        <span>
          Add policy
        </span>
      </button>
    </div>
    <div
      class="DataGrid"
      data-testid="dataGrid"
    >
      <div
        class="DataGrid_search"
      >
        <div
          class="DataGrid_searchBar"
        >
          <span
            aria-hidden="true"
            class="DataGrid_searchIcon"
          >
            <i
              class="fa fa-search"
              title="Search Icon"
            />
          </span>
          <input
            data-testid="searchInput"
            placeholder="Search"
            type="text"
            value=""
          />
          <i
            class="DataGrid_clearButton fa fa-times-circle hidden"
            data-testid="clear-search"
          />
        </div>
      </div>
      <div
        class="DataGrid_header"
        data-testid="dataGrid-header"
      >
        <div
          class="DataGrid_cell"
          style="flex-grow: 5;"
        >
          Name
        </div>
        <div
          class="DataGrid_cell"
          style="flex-grow: 4;"
        >
          Applies to
        </div>
        <div
          class="DataGrid_cell"
          style="flex-grow: 1;"
        >
          <span />
        </div>
      </div>
      <div
        class="DataGrid_rows"
        data-testid="dataGrid-rows"
        style="min-height: 0px;"
      >
        <div
          class="DataGrid_empty"
        >
          Something went wrong. Try again
        </div>
      </div>
    </div>
  </div>
</div>
`;
